# mentohust-win-modern

./: .gitignore  README.md
mentohust-modern/: README.md  launcher.py  pyproject.toml
mentohust-modern/src/mentohust_modern/: __init__.py  __main__.py  app_paths.py  client.py  config.py  elevation.py  gui.py  interfaces.py  logging_utils.py  openwrt.py  ruijie.py  runtime_checks.py  tray.py  windows.py
mentohust-modern/tests/: test_client_stop.py  test_config.py  test_elevation.py  test_interfaces.py  test_openwrt.py  test_paths.py  test_ruijie.py  test_smoke.py  test_wifi_guard.py  test_windows.py
mentohust-modern/tools/: build_exe.ps1
